Implemented C compiler automatic local variables allocation